This file contains information about Fuego releases. It also contains a
(probably incomplete) list of the most important changes or of all
critical bugfixes in releases from a bugfix branch. For a detailed changelog
of changes in the main development branch, consult the version control
history.

Current development version (branch VERSION_0_2_FIXES)
===========================

* Fix declaration/definition mismatch of GoBoardUtil::ScorePoint() that caused
  an error with Intel's ICC compiler
* Fix bug: value 0 for parameter 'precision' in SgRealProp constructor did not
  cause default precision to be used as documented.
* Fix bug in GoStaticLadder::IsEdgeLadder

Version 0.2.1 - 2008 Sep 16
===========================

* Add regression tests, opening book, and doxygen files to distribution
* Make VPATH builds with read-only source tree work
* Remove unnecessary check for CppUnit in configure.in

Version 0.2 - 2008 Aug 28
=========================

* Declare data members of UCT nodes and signature statistis as volatile.
  This avoids that the compiler reorders writes, which could cause crashes
  if the UCT search is used in lock-free mode.
* Fix bug that caused reusing the subtree not to work (if options reuse_subtree
  or ponder were used)


Version 0.1 - 2008 May 30
=========================

Initial release. Compilation and functionality are tested on current Linux
distributions (Fedora 8, Ubuntu 8.04 LTS) and Mac OS X.