@@ -10,7 +10,8 @@ Current development version (branch VERSION_0_2_FIXES)
 * Fix declaration/definition mismatch of GoBoardUtil::ScorePoint() that caused
   an error with Intel's ICC compiler
 * Fix bug: value 0 for parameter 'precision' in SgRealProp constructor did not
-  cause default precision to be used as documented.
+  cause default precision to be used as documented. Add precision paramter
+  to SgNode::SetRealProp() and SgPropReal::SetValue().
 * Fix bug in GoStaticLadder::IsEdgeLadder
 
 Version 0.2.1 - 2008 Sep 16
